[project]
name = "emotional-game-theory-ai"
version = "0.1.0"
description = "An experimental application exploring how emotional data impacts AI decision-making in game-theoretic scenarios"
requires-python = ">=3.9,<3.13"
dependencies = [
    "chainlit>=2.0.4",
    "python-dotenv",
    "streamlit",
    "openai",
]